black cap alignment fixed

--- a/css/main.css
+++ b/css/main.css
@@ -339,8 +339,7 @@ i {
   font-stretch: normal;
   line-height: 2.4;
   letter-spacing: normal;
-  color: #333333;
-  margin-top: 0; }
+  color: #333333; }
 .black-cap p {
   font-family: 'Source Sans Pro', sans-serif;
   font-weight: 600;
