--- a/scss/partials/_helpers.scss
+++ b/scss/partials/_helpers.scss
@@ -274,7 +274,6 @@ i {
     line-height: 2.4;
     letter-spacing: normal;
     color:$main-title;
-    margin-top: 0;
   }
 
     p {
